[package]
name = "dedupe"
version = "0.1.0"
edition = "2024"

[dependencies]

walkdir = "2.5"
rayon = "1.9"
blake3 = "1.5"
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"
tempfile = "3.20.0"
